src/test/ui/malformed/malformed-plugin-2.stderr
error: malformed `plugin` attribute input
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^ If I were you, I would simply must be of the form: `#[plugin(name|name(args))]`

warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/malformed-plugin-2.rs:2:1
   |
LL | #![plugin="bleh"]
   | ^^^^^^^^^^^^^^^^^ If I were you, I would simply may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to previous error

